attempt to fix the code coverage plugin

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ elixir: '1.6.4'
 sudo: false
 
 script:
-  - MIX_ENV=test mix do compile --warnings-as-errors, coveralls.json
+  - MIX_ENV=test mix do compile, coveralls.json
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
